--- a/docs/visual-basic/misc/bc30034.md
+++ b/docs/visual-basic/misc/bc30034.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30034
 ms.assetid: 46f25ddb-0d9f-48f8-8656-1a880ba8a1ba
-ms.openlocfilehash: f9eb0a605cf224255aa9e0a9fd71e518f2018de9
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 386c93d578364f0bd88cb48dce3bee4f9e70fc2d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784354"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54513466"
 ---
-# <a name="bracketed-identifier-is-missing-closing-"></a><span data-ttu-id="d6c25-102">대괄호로 묶은 식별자에 닫는 ']'가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="d6c25-102">Bracketed identifier is missing closing ']'</span></span>
-<span data-ttu-id="d6c25-103">이스케이프된 이름의 대괄호는 일치하는 쌍으로 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d6c25-103">Brackets in an escaped name must occur in matching pairs.</span></span>  
+# <a name="bracketed-identifier-is-missing-closing-"></a><span data-ttu-id="28a9d-102">대괄호로 묶은 식별자에 닫는 ']'가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="28a9d-102">Bracketed identifier is missing closing ']'</span></span>
+<span data-ttu-id="28a9d-103">이스케이프된 이름의 대괄호는 일치하는 쌍으로 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="28a9d-103">Brackets in an escaped name must occur in matching pairs.</span></span>  
   
- <span data-ttu-id="d6c25-104">**오류 ID:** BC30034</span><span class="sxs-lookup"><span data-stu-id="d6c25-104">**Error ID:** BC30034</span></span>  
+ <span data-ttu-id="28a9d-104">**오류 ID:** BC30034</span><span class="sxs-lookup"><span data-stu-id="28a9d-104">**Error ID:** BC30034</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d6c25-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d6c25-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="28a9d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="28a9d-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d6c25-106">이스케이프된 이름의 끝에 닫는 대괄호를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="d6c25-106">Place a closing bracket at the end of the escaped name.</span></span>  
+-   <span data-ttu-id="28a9d-106">이스케이프된 이름의 끝에 닫는 대괄호를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="28a9d-106">Place a closing bracket at the end of the escaped name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d6c25-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d6c25-107">See Also</span></span>  
- [<span data-ttu-id="d6c25-108">선언 요소 이름</span><span class="sxs-lookup"><span data-stu-id="d6c25-108">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+## <a name="see-also"></a><span data-ttu-id="28a9d-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="28a9d-107">See also</span></span>
+- [<span data-ttu-id="28a9d-108">선언 요소 이름</span><span class="sxs-lookup"><span data-stu-id="28a9d-108">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
