--- a/docs/visual-basic/misc/bc30126.md
+++ b/docs/visual-basic/misc/bc30126.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30126
 ms.assetid: a522c39e-1f11-45c8-a00b-3546c842909a
-ms.openlocfilehash: c17e8d560e0073344d13bfc91b4619aa917e61e5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 2e597f7d011a4276f3937eb3349cb2016dad79b6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780025"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607857"
 ---
-# <a name="readonly-property-must-provide-a-get"></a><span data-ttu-id="a204c-102">'ReadOnly' 속성에는 'Get'을 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a204c-102">'ReadOnly' property must provide a 'Get'</span></span>
-<span data-ttu-id="a204c-103">속성이 `ReadOnly`로 선언되면 해당 값을 읽기 위한 프로시저를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a204c-103">If a property is declared as `ReadOnly`, it must supply a procedure for reading its value.</span></span>  
+# <a name="readonly-property-must-provide-a-get"></a><span data-ttu-id="335dc-102">'ReadOnly' 속성에는 'Get'을 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="335dc-102">'ReadOnly' property must provide a 'Get'</span></span>
+<span data-ttu-id="335dc-103">속성이 `ReadOnly`로 선언되면 해당 값을 읽기 위한 프로시저를 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="335dc-103">If a property is declared as `ReadOnly`, it must supply a procedure for reading its value.</span></span>  
   
- <span data-ttu-id="a204c-104">**오류 ID:** BC30126</span><span class="sxs-lookup"><span data-stu-id="a204c-104">**Error ID:** BC30126</span></span>  
+ <span data-ttu-id="335dc-104">**오류 ID:** BC30126</span><span class="sxs-lookup"><span data-stu-id="335dc-104">**Error ID:** BC30126</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a204c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a204c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="335dc-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="335dc-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a204c-106">`Get` 문과 `Property` 문 사이에 `End Property` 프로시저를 포함해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a204c-106">Make sure you include a `Get` procedure between the `Property` statement and the `End Property` statement.</span></span>  
+1.  <span data-ttu-id="335dc-106">`Get` 문과 `Property` 문 사이에 `End Property` 프로시저를 포함해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="335dc-106">Make sure you include a `Get` procedure between the `Property` statement and the `End Property` statement.</span></span>  
   
-2.  <span data-ttu-id="a204c-107">`Property` 선언 내에서 다른 프로시저가 올바르게 종료되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="a204c-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
+2.  <span data-ttu-id="335dc-107">`Property` 선언 내에서 다른 프로시저가 올바르게 종료되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="335dc-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a204c-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a204c-108">See Also</span></span>  
- [<span data-ttu-id="a204c-109">Property 문</span><span class="sxs-lookup"><span data-stu-id="a204c-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)  
- [<span data-ttu-id="a204c-110">Get 문</span><span class="sxs-lookup"><span data-stu-id="a204c-110">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
+## <a name="see-also"></a><span data-ttu-id="335dc-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="335dc-108">See also</span></span>
+- [<span data-ttu-id="335dc-109">Property 문</span><span class="sxs-lookup"><span data-stu-id="335dc-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="335dc-110">Get 문</span><span class="sxs-lookup"><span data-stu-id="335dc-110">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
