--- a/docs/visual-basic/misc/bc30636.md
+++ b/docs/visual-basic/misc/bc30636.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30636
 ms.assetid: 37d7115d-0fbf-4ac4-9065-b7580e116bdd
-ms.openlocfilehash: 76de99142b9d5dcf82a227e70739584091088630
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 86aa2e6fb7caf29d6c8fc8452c2a4809de03bcb5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763502"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54495762"
 ---
-# <a name="gt-expected"></a><span data-ttu-id="b20cb-102">'&gt;' 예상</span><span class="sxs-lookup"><span data-stu-id="b20cb-102">'&gt;' expected</span></span>
-<span data-ttu-id="b20cb-103">지정된 코드에 대한 구문이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b20cb-103">The syntax for the specified code is incorrect.</span></span> <span data-ttu-id="b20cb-104">이 오류는 대체로 특성 또는 XML 요소 리터럴에 대한 닫는 꺾쇠 괄호가 없음을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="b20cb-104">This error often indicates that the closing angle bracket for an attribute or XML element literal is missing.</span></span>  
+# <a name="gt-expected"></a><span data-ttu-id="acfc3-102">'&gt;' 예상</span><span class="sxs-lookup"><span data-stu-id="acfc3-102">'&gt;' expected</span></span>
+<span data-ttu-id="acfc3-103">지정된 코드에 대한 구문이 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="acfc3-103">The syntax for the specified code is incorrect.</span></span> <span data-ttu-id="acfc3-104">이 오류는 대체로 특성 또는 XML 요소 리터럴에 대한 닫는 꺾쇠 괄호가 없음을 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="acfc3-104">This error often indicates that the closing angle bracket for an attribute or XML element literal is missing.</span></span>  
   
- <span data-ttu-id="b20cb-105">**오류 ID:** BC30636</span><span class="sxs-lookup"><span data-stu-id="b20cb-105">**Error ID:** BC30636</span></span>  
+ <span data-ttu-id="acfc3-105">**오류 ID:** BC30636</span><span class="sxs-lookup"><span data-stu-id="acfc3-105">**Error ID:** BC30636</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b20cb-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b20cb-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="acfc3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="acfc3-106">To correct this error</span></span>  
   
--   <span data-ttu-id="b20cb-107">사용되는 코드의 구문을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b20cb-107">Check the syntax for the code being used.</span></span>  
+-   <span data-ttu-id="acfc3-107">사용되는 코드의 구문을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="acfc3-107">Check the syntax for the code being used.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b20cb-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b20cb-108">See Also</span></span>  
- [<span data-ttu-id="b20cb-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="b20cb-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- [<span data-ttu-id="b20cb-110">선언문</span><span class="sxs-lookup"><span data-stu-id="b20cb-110">Declaration Statements</span></span>](~/docs/visual-basic/programming-guide/language-features/statements.md#declaration-statements)  
- [<span data-ttu-id="b20cb-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="b20cb-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+## <a name="see-also"></a><span data-ttu-id="acfc3-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="acfc3-108">See also</span></span>
+- [<span data-ttu-id="acfc3-109">특성 개요</span><span class="sxs-lookup"><span data-stu-id="acfc3-109">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="acfc3-110">선언문</span><span class="sxs-lookup"><span data-stu-id="acfc3-110">Declaration Statements</span></span>](~/docs/visual-basic/programming-guide/language-features/statements.md#declaration-statements)
+- [<span data-ttu-id="acfc3-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="acfc3-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
