--- a/docs/visual-basic/misc/bc30949.md
+++ b/docs/visual-basic/misc/bc30949.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30949
 ms.assetid: b3d27d9c-7a1f-4bac-ad71-388b24b807b3
-ms.openlocfilehash: 3a691923ea859bf96d3c478e94cb7acbbf88d1b1
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e3a06552fb7ada6904bd240a3bac9e7a1047928e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53774630"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54609072"
 ---
-# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a><span data-ttu-id="63729-102">비상수 차원;에 대 한 배열 이니셜라이저를 지정할 수 없습니다. 비어 있는 이니셜라이저를 사용 하 여 '{}'</span><span class="sxs-lookup"><span data-stu-id="63729-102">Array initializer cannot be specified for a non constant dimension; use the empty initializer '{}'</span></span>
-<span data-ttu-id="63729-103">배열에서 컴파일 시간에 알려지지 않은 차원을 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="63729-103">An array initializes a dimension that is not known at compile time.</span></span>  
+# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a><span data-ttu-id="7d9ce-102">비상수 차원;에 대 한 배열 이니셜라이저를 지정할 수 없습니다. 비어 있는 이니셜라이저를 사용 하 여 '{}'</span><span class="sxs-lookup"><span data-stu-id="7d9ce-102">Array initializer cannot be specified for a non constant dimension; use the empty initializer '{}'</span></span>
+<span data-ttu-id="7d9ce-103">배열에서 컴파일 시간에 알려지지 않은 차원을 초기화합니다.</span><span class="sxs-lookup"><span data-stu-id="7d9ce-103">An array initializes a dimension that is not known at compile time.</span></span>  
   
- <span data-ttu-id="63729-104">다음 코드에서는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="63729-104">The following code generates this error.</span></span>  
+ <span data-ttu-id="7d9ce-104">다음 코드에서는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="7d9ce-104">The following code generates this error.</span></span>  
   
 ```  
 Dim j As Integer  
 Dim intArray As Integer = New Integer(1, j) {{0, 100}, {1,101}}  
 ```  
   
- <span data-ttu-id="63729-105">다음 코드에서는 오류를 방지합니다.</span><span class="sxs-lookup"><span data-stu-id="63729-105">The following code avoids the error.</span></span>  
+ <span data-ttu-id="7d9ce-105">다음 코드에서는 오류를 방지합니다.</span><span class="sxs-lookup"><span data-stu-id="7d9ce-105">The following code avoids the error.</span></span>  
   
 ```  
 Dim intArray As Integer = New Integer(1, j) {}  
@@ -34,16 +34,16 @@ For i As Integer = 0 To j
 Next i  
 ```  
   
- <span data-ttu-id="63729-106">**오류 ID:** BC30949</span><span class="sxs-lookup"><span data-stu-id="63729-106">**Error ID:** BC30949</span></span>  
+ <span data-ttu-id="7d9ce-106">**오류 ID:** BC30949</span><span class="sxs-lookup"><span data-stu-id="7d9ce-106">**Error ID:** BC30949</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="63729-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="63729-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7d9ce-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7d9ce-107">To correct this error</span></span>  
   
--   <span data-ttu-id="63729-108">가능하면 배열 선언에 상수 차원을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="63729-108">If possible, specify a constant dimension in the array declaration.</span></span>  
+-   <span data-ttu-id="7d9ce-108">가능하면 배열 선언에 상수 차원을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="7d9ce-108">If possible, specify a constant dimension in the array declaration.</span></span>  
   
--   <span data-ttu-id="63729-109">상수 차원을 지정할 수 없는 경우 비상수 차원이 알려질 때 루프를 사용하여 배열을 초기화해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="63729-109">If you cannot specify a constant dimension, then you must initialize the array using a loop when the nonconstant dimension becomes known.</span></span>  
+-   <span data-ttu-id="7d9ce-109">상수 차원을 지정할 수 없는 경우 비상수 차원이 알려질 때 루프를 사용하여 배열을 초기화해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="7d9ce-109">If you cannot specify a constant dimension, then you must initialize the array using a loop when the nonconstant dimension becomes known.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="63729-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="63729-110">See Also</span></span>  
- [<span data-ttu-id="63729-111">For Each...Next 문</span><span class="sxs-lookup"><span data-stu-id="63729-111">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)  
- [<span data-ttu-id="63729-112">Visual Basic의 배열</span><span class="sxs-lookup"><span data-stu-id="63729-112">Arrays in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)  
- [<span data-ttu-id="63729-113">방법: Visual Basic에서 배열 변수 초기화</span><span class="sxs-lookup"><span data-stu-id="63729-113">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)  
- [<span data-ttu-id="63729-114">Visual Basic의 배열 크기</span><span class="sxs-lookup"><span data-stu-id="63729-114">Array dimensions in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/array-dimensions.md)
+## <a name="see-also"></a><span data-ttu-id="7d9ce-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="7d9ce-110">See also</span></span>
+- [<span data-ttu-id="7d9ce-111">For Each...Next 문</span><span class="sxs-lookup"><span data-stu-id="7d9ce-111">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [<span data-ttu-id="7d9ce-112">Visual Basic의 배열</span><span class="sxs-lookup"><span data-stu-id="7d9ce-112">Arrays in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="7d9ce-113">방법: Visual Basic에서 배열 변수 초기화</span><span class="sxs-lookup"><span data-stu-id="7d9ce-113">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [<span data-ttu-id="7d9ce-114">Visual Basic의 배열 크기</span><span class="sxs-lookup"><span data-stu-id="7d9ce-114">Array dimensions in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/array-dimensions.md)
