--- a/docs/visual-basic/misc/bc30954.md
+++ b/docs/visual-basic/misc/bc30954.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30954
 ms.assetid: 796592c4-70b7-45be-9322-db09e9095d7d
-ms.openlocfilehash: 2cc639beeef9647781d76339cea29b7357d60204
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3e39d092ffac5b951aa443d1d08c24dcf1d3b3bf
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783223"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54522325"
 ---
-# <a name="type-arguments-inferred-for-method-ltprocedurenamegt-result-in-the-following-errors-lterrorlistgt"></a><span data-ttu-id="6fcb5-102">메서드에 대해 유추 된 형식 인수가 '&lt;procedurename&gt;' 다음 오류를 발생 시킵니다:&lt;errorlist&gt;</span><span class="sxs-lookup"><span data-stu-id="6fcb5-102">Type arguments inferred for method '&lt;procedurename&gt;' result in the following errors :&lt;errorlist&gt;</span></span>
-<span data-ttu-id="6fcb5-103">제네릭 프로시저가 형식 인수를 제공하지 않고 호출되었으며 유추된 형식 인수로 인해 하나 이상의 제약 조건 위반이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-103">A generic procedure is called without supplying any type arguments, and the inferred type arguments result in one or more constraint violations.</span></span>  
+# <a name="type-arguments-inferred-for-method-ltprocedurenamegt-result-in-the-following-errors-lterrorlistgt"></a><span data-ttu-id="7d93d-102">메서드에 대해 유추 된 형식 인수가 '&lt;procedurename&gt;' 다음 오류를 발생 시킵니다:&lt;errorlist&gt;</span><span class="sxs-lookup"><span data-stu-id="7d93d-102">Type arguments inferred for method '&lt;procedurename&gt;' result in the following errors :&lt;errorlist&gt;</span></span>
+<span data-ttu-id="7d93d-103">제네릭 프로시저가 형식 인수를 제공하지 않고 호출되었으며 유추된 형식 인수로 인해 하나 이상의 제약 조건 위반이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-103">A generic procedure is called without supplying any type arguments, and the inferred type arguments result in one or more constraint violations.</span></span>  
   
- <span data-ttu-id="6fcb5-104">일반적으로 제네릭 형식을 호출하는 경우 제네릭 형식이 정의하는 각 형식 매개 변수에 대해 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-104">Normally, when you invoke a generic type, you supply a type argument for each type parameter the generic type defines.</span></span> <span data-ttu-id="6fcb5-105">형식 인수를 제공하지 않으면 컴파일러에서 형식 매개 변수에 전달될 형식을 유추하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="6fcb5-106">유추된 형식이 하나 이상의 형식 매개 변수 제약 조건을 충족하지 않을 경우 컴파일러에서 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-106">If the inferred types fail to satisfy one or more of the type parameter constraints, the compiler generates this error.</span></span>  
+ <span data-ttu-id="7d93d-104">일반적으로 제네릭 형식을 호출하는 경우 제네릭 형식이 정의하는 각 형식 매개 변수에 대해 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-104">Normally, when you invoke a generic type, you supply a type argument for each type parameter the generic type defines.</span></span> <span data-ttu-id="7d93d-105">형식 인수를 제공하지 않으면 컴파일러에서 형식 매개 변수에 전달될 형식을 유추하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="7d93d-106">유추된 형식이 하나 이상의 형식 매개 변수 제약 조건을 충족하지 않을 경우 컴파일러에서 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-106">If the inferred types fail to satisfy one or more of the type parameter constraints, the compiler generates this error.</span></span>  
   
- <span data-ttu-id="6fcb5-107">형식 매개 변수의 *제약 조건* 은 전달할 수 있는 형식 인수를 제한합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-107">A *constraint* on a type parameter limits what type arguments can be passed to it.</span></span> <span data-ttu-id="6fcb5-108">예를 들어 <xref:System.IComparable%601> 인터페이스를 구현하는 클래스로 형식 매개 변수를 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-108">For example, a type parameter might be constrained to be a class that implements the <xref:System.IComparable%601> interface.</span></span> <span data-ttu-id="6fcb5-109">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)에서 "제약 조건"을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-109">For more information, see "Constraints" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
+ <span data-ttu-id="7d93d-107">형식 매개 변수의 *제약 조건* 은 전달할 수 있는 형식 인수를 제한합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-107">A *constraint* on a type parameter limits what type arguments can be passed to it.</span></span> <span data-ttu-id="7d93d-108">예를 들어 <xref:System.IComparable%601> 인터페이스를 구현하는 클래스로 형식 매개 변수를 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-108">For example, a type parameter might be constrained to be a class that implements the <xref:System.IComparable%601> interface.</span></span> <span data-ttu-id="7d93d-109">자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)에서 "제약 조건"을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="7d93d-109">For more information, see "Constraints" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
   
- <span data-ttu-id="6fcb5-110">**오류 ID:** BC30954</span><span class="sxs-lookup"><span data-stu-id="6fcb5-110">**Error ID:** BC30954</span></span>  
+ <span data-ttu-id="7d93d-110">**오류 ID:** BC30954</span><span class="sxs-lookup"><span data-stu-id="7d93d-110">**Error ID:** BC30954</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6fcb5-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6fcb5-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7d93d-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7d93d-111">To correct this error</span></span>  
   
--   <span data-ttu-id="6fcb5-112">컴파일러에서 유추할 필요가 없도록 제네릭 프로시저에 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="6fcb5-112">Supply type arguments to the generic procedure so that the compiler does not have to infer them.</span></span>  
+-   <span data-ttu-id="7d93d-112">컴파일러에서 유추할 필요가 없도록 제네릭 프로시저에 형식 인수를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="7d93d-112">Supply type arguments to the generic procedure so that the compiler does not have to infer them.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6fcb5-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6fcb5-113">See Also</span></span>  
- [<span data-ttu-id="6fcb5-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6fcb5-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="6fcb5-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6fcb5-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)  
- [<span data-ttu-id="6fcb5-116">형식 목록</span><span class="sxs-lookup"><span data-stu-id="6fcb5-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="7d93d-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="7d93d-113">See also</span></span>
+- [<span data-ttu-id="7d93d-114">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="7d93d-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="7d93d-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7d93d-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="7d93d-116">형식 목록</span><span class="sxs-lookup"><span data-stu-id="7d93d-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
