--- a/docs/visual-basic/misc/bc30962.md
+++ b/docs/visual-basic/misc/bc30962.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30962
 ms.assetid: 6f338158-bfb4-4cc0-bbf7-1111c708613c
-ms.openlocfilehash: afef46b76530ce114bbb5755f39e89879c37a5f0
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: cf48e0869d8cde88f8bbfe5a63bacb41dc9777ca
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781182"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54519192"
 ---
-# <a name="reference-required-to-assembly-ltassemblyidentitygt-containing-type-lttypenamegt-but-a-suitable-reference-could-not-be-found-due-to-possible-circular-references-ltreferencedependencylistgt"></a><span data-ttu-id="b2eb4-102">참조 어셈블리에 필요한 '&lt;assemblyidentity&gt;'형식을 포함 하 는'&lt;typename&gt;', 하지만 순환 참조가 발생할 수 있으므로 적합 한 참조를 찾을 수 없습니다: &lt; referencedependencylist&gt;</span><span class="sxs-lookup"><span data-stu-id="b2eb4-102">Reference required to assembly '&lt;assemblyidentity&gt;' containing type '&lt;typename&gt;', but a suitable reference could not be found due to possible circular references: &lt;referencedependencylist&gt;</span></span>
-<span data-ttu-id="b2eb4-103">식은 프로젝트 외부에 정의된 클래스, 구조체, 인터페이스, 열거형 또는 대리자와 같은 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-103">An expression uses a type, such as a class, structure, interface, enumeration, or delegate, that is defined outside your project.</span></span> <span data-ttu-id="b2eb4-104">그러나 해당 어셈블리에 대한 프로젝트 참조가 순환 참조 집합의 일부입니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-104">However, your project reference to that assembly is part of a set of circular references.</span></span>  
+# <a name="reference-required-to-assembly-ltassemblyidentitygt-containing-type-lttypenamegt-but-a-suitable-reference-could-not-be-found-due-to-possible-circular-references-ltreferencedependencylistgt"></a><span data-ttu-id="35919-102">참조 어셈블리에 필요한 '&lt;assemblyidentity&gt;'형식을 포함 하 는'&lt;typename&gt;', 하지만 순환 참조가 발생할 수 있으므로 적합 한 참조를 찾을 수 없습니다: &lt; referencedependencylist&gt;</span><span class="sxs-lookup"><span data-stu-id="35919-102">Reference required to assembly '&lt;assemblyidentity&gt;' containing type '&lt;typename&gt;', but a suitable reference could not be found due to possible circular references: &lt;referencedependencylist&gt;</span></span>
+<span data-ttu-id="35919-103">식은 프로젝트 외부에 정의된 클래스, 구조체, 인터페이스, 열거형 또는 대리자와 같은 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="35919-103">An expression uses a type, such as a class, structure, interface, enumeration, or delegate, that is defined outside your project.</span></span> <span data-ttu-id="35919-104">그러나 해당 어셈블리에 대한 프로젝트 참조가 순환 참조 집합의 일부입니다.</span><span class="sxs-lookup"><span data-stu-id="35919-104">However, your project reference to that assembly is part of a set of circular references.</span></span>  
   
- <span data-ttu-id="b2eb4-105">여러 프로젝트 간에 참조가 있는 경우 참조가 *순환*될 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-105">When several projects have references among themselves, the references can be *circular*.</span></span> <span data-ttu-id="b2eb4-106">예를 들어 두 프로젝트에 서로에 대한 참조가 있을 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-106">For example, two projects can have references to each other.</span></span> <span data-ttu-id="b2eb4-107">보다 일반적으로, 한 프로젝트에서 다음 프로젝트로의 참조 체인이 최종적으로 시작 프로젝트로 돌아갈 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-107">More generally, a chain of references from one project to the next can ultimately return to the starting project.</span></span> <span data-ttu-id="b2eb4-108">이러한 경우 체인의 끝에 참조를 확인할 수 있는 최종 프로젝트가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-108">In such cases, there is no final project at the end of the chain with which to resolve the reference.</span></span>  
+ <span data-ttu-id="35919-105">여러 프로젝트 간에 참조가 있는 경우 참조가 *순환*될 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="35919-105">When several projects have references among themselves, the references can be *circular*.</span></span> <span data-ttu-id="35919-106">예를 들어 두 프로젝트에 서로에 대한 참조가 있을 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="35919-106">For example, two projects can have references to each other.</span></span> <span data-ttu-id="35919-107">보다 일반적으로, 한 프로젝트에서 다음 프로젝트로의 참조 체인이 최종적으로 시작 프로젝트로 돌아갈 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="35919-107">More generally, a chain of references from one project to the next can ultimately return to the starting project.</span></span> <span data-ttu-id="35919-108">이러한 경우 체인의 끝에 참조를 확인할 수 있는 최종 프로젝트가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="35919-108">In such cases, there is no final project at the end of the chain with which to resolve the reference.</span></span>  
   
- <span data-ttu-id="b2eb4-109">다른 어셈블리에 정의 된 형식에 액세스 하려면 해당 어셈블리에 대 한 참조를 Visual Basic 컴파일러에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-109">To access a type defined in another assembly, the Visual Basic compiler must have a reference to that assembly.</span></span> <span data-ttu-id="b2eb4-110">이 참조는 프로젝트 간의 순환 참조를 발생시키지 않는 명확한 단일 참조여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-110">This must be a single, unambiguous reference that does not cause circular references among projects.</span></span>  
+ <span data-ttu-id="35919-109">다른 어셈블리에 정의 된 형식에 액세스 하려면 해당 어셈블리에 대 한 참조를 Visual Basic 컴파일러에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="35919-109">To access a type defined in another assembly, the Visual Basic compiler must have a reference to that assembly.</span></span> <span data-ttu-id="35919-110">이 참조는 프로젝트 간의 순환 참조를 발생시키지 않는 명확한 단일 참조여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="35919-110">This must be a single, unambiguous reference that does not cause circular references among projects.</span></span>  
   
- <span data-ttu-id="b2eb4-111">**오류 ID:** BC30962</span><span class="sxs-lookup"><span data-stu-id="b2eb4-111">**Error ID:** BC30962</span></span>  
+ <span data-ttu-id="35919-111">**오류 ID:** BC30962</span><span class="sxs-lookup"><span data-stu-id="35919-111">**Error ID:** BC30962</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b2eb4-112">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b2eb4-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="35919-112">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="35919-112">To correct this error</span></span>  
   
--   <span data-ttu-id="b2eb4-113">프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리를 생성하는 프로젝트에 대한 직접 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="b2eb4-113">In your project properties, add a direct reference to the project producing the assembly that defines the type you are using.</span></span>  
+-   <span data-ttu-id="35919-113">프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리를 생성하는 프로젝트에 대한 직접 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="35919-113">In your project properties, add a direct reference to the project producing the assembly that defines the type you are using.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b2eb4-114">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b2eb4-114">See Also</span></span>  
- [<span data-ttu-id="b2eb4-115">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="b2eb4-115">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)  
- [<span data-ttu-id="b2eb4-116">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="b2eb4-116">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)  
- [<span data-ttu-id="b2eb4-117">끊어진 참조 문제 해결</span><span class="sxs-lookup"><span data-stu-id="b2eb4-117">Troubleshooting Broken References</span></span>](/visualstudio/ide/troubleshooting-broken-references)
+## <a name="see-also"></a><span data-ttu-id="35919-114">참고자료</span><span class="sxs-lookup"><span data-stu-id="35919-114">See also</span></span>
+- [<span data-ttu-id="35919-115">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="35919-115">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
+- [<span data-ttu-id="35919-116">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="35919-116">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
+- [<span data-ttu-id="35919-117">끊어진 참조 문제 해결</span><span class="sxs-lookup"><span data-stu-id="35919-117">Troubleshooting Broken References</span></span>](/visualstudio/ide/troubleshooting-broken-references)
