--- a/docs/visual-basic/misc/bc32015.md
+++ b/docs/visual-basic/misc/bc32015.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC32015
 ms.assetid: 6e62fe8d-a875-4995-b6b2-443e75c65e85
-ms.openlocfilehash: 1c5f15c18ffcbf5a4e9a433cdc0e7c9af4744380
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 5f86ed1e3884e07e8e0f51a7121af4f13ebc21d0
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775572"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54610463"
 ---
-# <a name="assembly-or-module-expected"></a><span data-ttu-id="e5402-102">'Assembly' 또는 'Module'이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-102">'Assembly' or 'Module' expected</span></span>
-<span data-ttu-id="e5402-103">전역 특성은 전체 어셈블리에 적용되는지 또는 현재 모듈에만 적용되는지를 표시하지 않고 지정됩니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-103">A global attribute is specified without indicating whether it applies to the entire assembly or only to the current module.</span></span> <span data-ttu-id="e5402-104">전역 특성은 `Assembly` 또는 `Module`중 하나를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-104">Global attributes must specify either `Assembly` or `Module`.</span></span>  
+# <a name="assembly-or-module-expected"></a><span data-ttu-id="6365b-102">'Assembly' 또는 'Module'이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-102">'Assembly' or 'Module' expected</span></span>
+<span data-ttu-id="6365b-103">전역 특성은 전체 어셈블리에 적용되는지 또는 현재 모듈에만 적용되는지를 표시하지 않고 지정됩니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-103">A global attribute is specified without indicating whether it applies to the entire assembly or only to the current module.</span></span> <span data-ttu-id="6365b-104">전역 특성은 `Assembly` 또는 `Module`중 하나를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-104">Global attributes must specify either `Assembly` or `Module`.</span></span>  
   
- <span data-ttu-id="e5402-105">전역 특성은 특정 프로그래밍 요소의 선언에 적용되지 않고 소스 줄 자체에 표시되는 특성입니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-105">A global attribute is one that appears on a source line by itself, rather than being applied to the declaration of a particular programming element.</span></span>  
+ <span data-ttu-id="6365b-105">전역 특성은 특정 프로그래밍 요소의 선언에 적용되지 않고 소스 줄 자체에 표시되는 특성입니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-105">A global attribute is one that appears on a source line by itself, rather than being applied to the declaration of a particular programming element.</span></span>  
   
- <span data-ttu-id="e5402-106">**오류 ID:** BC32015</span><span class="sxs-lookup"><span data-stu-id="e5402-106">**Error ID:** BC32015</span></span>  
+ <span data-ttu-id="6365b-106">**오류 ID:** BC32015</span><span class="sxs-lookup"><span data-stu-id="6365b-106">**Error ID:** BC32015</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e5402-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e5402-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6365b-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6365b-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="e5402-108">특성을 전역으로 지정하려는 경우 특성 블록의 시작 부분에 `Assembly` 또는 `Module` 키워드와 콜론(:)을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-108">If you intend the attribute to be global, add the `Assembly` or `Module` keyword to the beginning of the attribute block, followed by a colon (:).</span></span>  
+1.  <span data-ttu-id="6365b-108">특성을 전역으로 지정하려는 경우 특성 블록의 시작 부분에 `Assembly` 또는 `Module` 키워드와 콜론(:)을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-108">If you intend the attribute to be global, add the `Assembly` or `Module` keyword to the beginning of the attribute block, followed by a colon (:).</span></span>  
   
-2.  <span data-ttu-id="e5402-109">특성을 전역으로 지정하지 않으려는 경우 특성 블록을 삭제하거나 프로그래밍 요소 선언으로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="e5402-109">If you do not intend the attribute to be global, delete the attribute block or move it to a programming element declaration.</span></span>  
+2.  <span data-ttu-id="6365b-109">특성을 전역으로 지정하지 않으려는 경우 특성 블록을 삭제하거나 프로그래밍 요소 선언으로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="6365b-109">If you do not intend the attribute to be global, delete the attribute block or move it to a programming element declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e5402-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e5402-110">See Also</span></span>  
- [<span data-ttu-id="e5402-111">어셈블리</span><span class="sxs-lookup"><span data-stu-id="e5402-111">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)  
- [<span data-ttu-id="e5402-112">모듈 \<키워드></span><span class="sxs-lookup"><span data-stu-id="e5402-112">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)  
-   
- 
+## <a name="see-also"></a><span data-ttu-id="6365b-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="6365b-110">See also</span></span>
+- [<span data-ttu-id="6365b-111">어셈블리</span><span class="sxs-lookup"><span data-stu-id="6365b-111">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
+- [<span data-ttu-id="6365b-112">모듈 \<키워드></span><span class="sxs-lookup"><span data-stu-id="6365b-112">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)
+
+
