--- a/docs/visual-basic/misc/bc32019.md
+++ b/docs/visual-basic/misc/bc32019.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32019
 ms.assetid: c28a3a7f-cd11-4657-bf76-b9daccc383bc
-ms.openlocfilehash: dba0e5f17a1b100fc6ca61eee6fd152e71406bc3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 28d171e6683ea8e4ed3a0134f54fe00b6f546c6a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764802"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54611841"
 ---
-# <a name="resume-or-goto-expected"></a><span data-ttu-id="a5c7f-102">'Resume' 또는 'GoTo'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="a5c7f-102">'Resume' or 'GoTo' expected</span></span>
-<span data-ttu-id="a5c7f-103">`On Error` 문이 `Resume` 절 또는 `GoTo` 절을 포함하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a5c7f-103">An `On Error` statement does not contain either a `Resume` clause or a `GoTo` clause.</span></span> <span data-ttu-id="a5c7f-104">두 절 중 하나를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a5c7f-104">It must use one clause or the other.</span></span>  
+# <a name="resume-or-goto-expected"></a><span data-ttu-id="bd596-102">'Resume' 또는 'GoTo'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="bd596-102">'Resume' or 'GoTo' expected</span></span>
+<span data-ttu-id="bd596-103">`On Error` 문이 `Resume` 절 또는 `GoTo` 절을 포함하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="bd596-103">An `On Error` statement does not contain either a `Resume` clause or a `GoTo` clause.</span></span> <span data-ttu-id="bd596-104">두 절 중 하나를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="bd596-104">It must use one clause or the other.</span></span>  
   
- <span data-ttu-id="a5c7f-105">**오류 ID:** BC32019</span><span class="sxs-lookup"><span data-stu-id="a5c7f-105">**Error ID:** BC32019</span></span>  
+ <span data-ttu-id="bd596-105">**오류 ID:** BC32019</span><span class="sxs-lookup"><span data-stu-id="bd596-105">**Error ID:** BC32019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a5c7f-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a5c7f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bd596-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="bd596-106">To correct this error</span></span>  
   
--   <span data-ttu-id="a5c7f-107">`Resume` 문에 `GoTo` 절 또는 `On Error` 절을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="a5c7f-107">Add either a `Resume` clause or a `GoTo` clause to the `On Error` statement.</span></span>  
+-   <span data-ttu-id="bd596-107">`Resume` 문에 `GoTo` 절 또는 `On Error` 절을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="bd596-107">Add either a `Resume` clause or a `GoTo` clause to the `On Error` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a5c7f-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a5c7f-108">See Also</span></span>  
- [<span data-ttu-id="a5c7f-109">On Error 문</span><span class="sxs-lookup"><span data-stu-id="a5c7f-109">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)  
- [<span data-ttu-id="a5c7f-110">Resume 문</span><span class="sxs-lookup"><span data-stu-id="a5c7f-110">Resume Statement</span></span>](../../visual-basic/language-reference/statements/resume-statement.md)  
- [<span data-ttu-id="a5c7f-111">GoTo 문</span><span class="sxs-lookup"><span data-stu-id="a5c7f-111">GoTo Statement</span></span>](../../visual-basic/language-reference/statements/goto-statement.md)
+## <a name="see-also"></a><span data-ttu-id="bd596-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="bd596-108">See also</span></span>
+- [<span data-ttu-id="bd596-109">On Error 문</span><span class="sxs-lookup"><span data-stu-id="bd596-109">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)
+- [<span data-ttu-id="bd596-110">Resume 문</span><span class="sxs-lookup"><span data-stu-id="bd596-110">Resume Statement</span></span>](../../visual-basic/language-reference/statements/resume-statement.md)
+- [<span data-ttu-id="bd596-111">GoTo 문</span><span class="sxs-lookup"><span data-stu-id="bd596-111">GoTo Statement</span></span>](../../visual-basic/language-reference/statements/goto-statement.md)
