--- a/docs/visual-basic/misc/bc33101.md
+++ b/docs/visual-basic/misc/bc33101.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC33101
 ms.assetid: b3e0e4e4-87b8-4a38-a450-15233497acaa
-ms.openlocfilehash: e8a4def4d5e12b0594feb3e2ded94a792170cf06
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4e75077b07cf6b61f4f5aaeedbd732682b92d492
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760606"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54498988"
 ---
-# <a name="type-lttypenamegt-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a><span data-ttu-id="ddc10-102">형식 '&lt;typeName&gt;' 형식 인수 이거나 값 형식 제약 되어야 '' 'Nullable' 또는 null 허용 한정자 ' 사용 하려면 Structure?'</span><span class="sxs-lookup"><span data-stu-id="ddc10-102">Type '&lt;typeName&gt;' must be a value type or a type argument constrained to 'Structure' in order to be used with 'Nullable' or nullable modifier '?'</span></span>
-<span data-ttu-id="ddc10-103">구조체가 포함된 값 형식만 nullable로 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ddc10-103">Only value types, including structures, can be declared nullable.</span></span>  
+# <a name="type-lttypenamegt-must-be-a-value-type-or-a-type-argument-constrained-to-structure-in-order-to-be-used-with-nullable-or-nullable-modifier-"></a><span data-ttu-id="84d2a-102">형식 '&lt;typeName&gt;' 형식 인수 이거나 값 형식 제약 되어야 '' 'Nullable' 또는 null 허용 한정자 ' 사용 하려면 Structure?'</span><span class="sxs-lookup"><span data-stu-id="84d2a-102">Type '&lt;typeName&gt;' must be a value type or a type argument constrained to 'Structure' in order to be used with 'Nullable' or nullable modifier '?'</span></span>
+<span data-ttu-id="84d2a-103">구조체가 포함된 값 형식만 nullable로 선언할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="84d2a-103">Only value types, including structures, can be declared nullable.</span></span>  
   
 ```vb  
 ' Valid.  
@@ -27,13 +27,13 @@ Dim m As Integer?
 ' Dim q As Nullable(Of Object)  
 ```  
   
- <span data-ttu-id="ddc10-104">**오류 ID:** BC33101</span><span class="sxs-lookup"><span data-stu-id="ddc10-104">**Error ID:** BC33101</span></span>  
+ <span data-ttu-id="84d2a-104">**오류 ID:** BC33101</span><span class="sxs-lookup"><span data-stu-id="84d2a-104">**Error ID:** BC33101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ddc10-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ddc10-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="84d2a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="84d2a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="ddc10-106">'?' 또는 `Nullable`을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ddc10-106">Remove the '?' or `Nullable`.</span></span>  
+-   <span data-ttu-id="84d2a-106">'?' 또는 `Nullable`을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="84d2a-106">Remove the '?' or `Nullable`.</span></span>  
   
--   <span data-ttu-id="ddc10-107">값 데이터 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="ddc10-107">Use a value data type.</span></span>  
+-   <span data-ttu-id="84d2a-107">값 데이터 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="84d2a-107">Use a value data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ddc10-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ddc10-108">See Also</span></span>  
- [<span data-ttu-id="ddc10-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="ddc10-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a><span data-ttu-id="84d2a-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="84d2a-108">See also</span></span>
+- [<span data-ttu-id="84d2a-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="84d2a-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
