--- a/docs/visual-basic/misc/bc36605.md
+++ b/docs/visual-basic/misc/bc36605.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36605
 ms.assetid: d0397b6e-bfc2-400c-92fc-efe82036cfdb
-ms.openlocfilehash: 9c27b1883545d9d80f10e9d1dcd9fe53b20e438f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: aff92d41f494a09757ee5b9c011cf91cc0bfcf17
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763177"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54498936"
 ---
-# <a name="by-expected"></a><span data-ttu-id="8ed6a-102">'By'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="8ed6a-102">'By' expected</span></span>
-<span data-ttu-id="8ed6a-103">`Order By` 또는 `Group By` 절이 `By` 키워드 없이 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8ed6a-103">An `Order By` or `Group By` clause has been specified without the `By` keyword.</span></span>  
+# <a name="by-expected"></a><span data-ttu-id="48ba6-102">'By'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="48ba6-102">'By' expected</span></span>
+<span data-ttu-id="48ba6-103">`Order By` 또는 `Group By` 절이 `By` 키워드 없이 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="48ba6-103">An `Order By` or `Group By` clause has been specified without the `By` keyword.</span></span>  
   
- <span data-ttu-id="8ed6a-104">**오류 ID:** BC36605</span><span class="sxs-lookup"><span data-stu-id="8ed6a-104">**Error ID:** BC36605</span></span>  
+ <span data-ttu-id="48ba6-104">**오류 ID:** BC36605</span><span class="sxs-lookup"><span data-stu-id="48ba6-104">**Error ID:** BC36605</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8ed6a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8ed6a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="48ba6-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="48ba6-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="8ed6a-106">`By` 또는 `Order By` 절에 `Group By` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="8ed6a-106">Add the `By` keyword to the `Order By` or `Group By` clause.</span></span> <span data-ttu-id="8ed6a-107">예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="8ed6a-107">The following is an example:</span></span>  
+1.  <span data-ttu-id="48ba6-106">`By` 또는 `Order By` 절에 `Group By` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="48ba6-106">Add the `By` keyword to the `Order By` or `Group By` clause.</span></span> <span data-ttu-id="48ba6-107">예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="48ba6-107">The following is an example:</span></span>  
   
 ```vb  
 Dim customersByCountry = From cust In customers _  
@@ -31,9 +31,9 @@ Dim customersByCountry = From cust In customers _
                          Order By CountryName  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="8ed6a-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8ed6a-108">See Also</span></span>  
- [<span data-ttu-id="8ed6a-109">방법: 쿼리 결과 정렬</span><span class="sxs-lookup"><span data-stu-id="8ed6a-109">How to: Sort Query Results</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)  
- [<span data-ttu-id="8ed6a-110">Order By 절</span><span class="sxs-lookup"><span data-stu-id="8ed6a-110">Order By Clause</span></span>](../../visual-basic/language-reference/queries/order-by-clause.md)  
- [<span data-ttu-id="8ed6a-111">Group By 절</span><span class="sxs-lookup"><span data-stu-id="8ed6a-111">Group By Clause</span></span>](../../visual-basic/language-reference/queries/group-by-clause.md)  
- [<span data-ttu-id="8ed6a-112">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="8ed6a-112">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [<span data-ttu-id="8ed6a-113">LINQ</span><span class="sxs-lookup"><span data-stu-id="8ed6a-113">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a><span data-ttu-id="48ba6-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="48ba6-108">See also</span></span>
+- [<span data-ttu-id="48ba6-109">방법: 쿼리 결과 정렬</span><span class="sxs-lookup"><span data-stu-id="48ba6-109">How to: Sort Query Results</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-sort-query-results-by-using-linq.md)
+- [<span data-ttu-id="48ba6-110">Order By 절</span><span class="sxs-lookup"><span data-stu-id="48ba6-110">Order By Clause</span></span>](../../visual-basic/language-reference/queries/order-by-clause.md)
+- [<span data-ttu-id="48ba6-111">Group By 절</span><span class="sxs-lookup"><span data-stu-id="48ba6-111">Group By Clause</span></span>](../../visual-basic/language-reference/queries/group-by-clause.md)
+- [<span data-ttu-id="48ba6-112">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="48ba6-112">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="48ba6-113">LINQ</span><span class="sxs-lookup"><span data-stu-id="48ba6-113">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
